Finish the HTML structure for the three pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>A recipe collection</h1>
-    <a href="recipe-collection/pepper-steak-pie.html">Pop's Pepper Steak Pie</a>
-    <a href="recipe-collection/lasagna.html">Nonna's Lasagna</a>
+    <ul>
+        <li><a href="recipe-collection/pepper-steak-pie.html">Pop's Pepper Steak Pie</a></li>
+        <li><a href="recipe-collection/lasagna.html">Nonna's Lasagna</a></li>
+    </ul>
 </body>
 </html>
