--- a/recipe-collection/pepper-steak-pie.html
+++ b/recipe-collection/pepper-steak-pie.html
@@ -6,7 +6,88 @@
     <title>Pepper Steak Pie</title>
 </head>
 <body>
+    <div><a href="../index.html">Back</a></div>
     <h1>Pop's Pepper Steak Pie</h1>
-    
+    <h2>Ingredients</h2>
+    <ul>
+        <li>
+            1.5 kg chuck steak de-boned and cubed
+        </li>
+        <li>
+            1 cup flour seasoned with salt & pepper
+        </li>
+        <li>
+            olive oil for frying
+        </li>
+        <li>
+            2 onions sliced
+        </li>
+        <li>
+            4 garlic cloves crushed
+        </li>
+        <li>
+            2 sprigs fresh rosemary
+        </li>
+        <li>
+            4 sprigs fresh thyme
+        </li>
+        <li>
+            1 x 400g can chopped tomatoes
+        </li>
+        <li>
+            2 cups beef stock
+        </li>
+        <li>
+            1-2 tablespoons cracked black pepper to taste
+        </li>
+        <li>
+            salt to taste
+        </li>
+        <li>
+            1 roll ready-made puff pastry thawed
+        </li>
+        <li>
+            1 egg beaten
+        </li>
+    </ul>
+    <h2>Method</h2>
+    <ol>
+        <li>
+            In a large pot, heat a generous splash of olive oil.
+        </li>
+        <li>
+            Coat the chuck steak in the seasoned flour then shake of excess.
+        </li>
+        <li>
+            Fry the beef in the hot oil until golden brown all over. Remove from the pot and set aside.
+        </li>
+        <li>
+            In the same pot, fry the onions until soft and translucent then add the garlic, rosemary and thyme and fry for another 30 seconds.
+        </li>
+        <li>
+            Pour in the tomatoes, stock and pepper and add the beef back to the pot.
+        </li>
+        <li>
+            Reduce the heat and allow to simmer for 90 mins - 2 hours until the beef is soft and tender. Keep an eye on the beef while it's cooking and top up with stock if necessary.
+        </li>
+        <li>
+            Pre-heat the oven to 180°c.
+        </li>
+        <li>
+            When the beef is cooked, season to taste then place in an oven-proof pie dish to make a large pie, or smaller pie dishes for individual pies. Alternatively you can add a layer of pastry to the bottom of the dish as well to make an encased pie.
+        </li>
+        <li>
+            Brush the edges of the dish with beaten egg and roll over the puff pastry. Trim the edges then brush with the remaining egg.
+        </li>
+        <li>
+            Make a small incision in the centre of the pie to allow steam to escape.
+        </li>
+        <li>
+            Place the pie in the oven and bake for 20-25 minutes until the pastry is golden brown and crisp.
+        </li>
+        <li>
+            Remove from the oven and serve.
+        </li>
+    </ol>    
 </body>
 </html>
